<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imagedetail.ImageDetailFragment"
    android:clickable="true"
    android:background="@color/colorImageDetailBackground">

    <com.bendezu.yandexphotos.view.HackyViewPager
        android:id="@+id/image_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scrim_height"
        android:background="@drawable/gradient_scrim">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_gravity="start"
            android:background="@drawable/ripple_white"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button_desc" />

        <TextView
            android:id="@+id/image_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/colorTextLight"
            tools:text="1 of 30"/>

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_gravity="end"
            android:background="@drawable/ripple_white"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_button_desc" />

    </FrameLayout>

</FrameLayout>