...
        android:src="@mipmap/logo_yandex"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/btn_log_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@drawable/ripple_black_red"
        android:elevation="2dp"
        android:stateListAnimator="@animator/button_raise"
...
